--- a/ice-run-bom/pom.xml
+++ b/ice-run-bom/pom.xml
@@ -121,12 +121,12 @@
     <distributionManagement>
 
         <snapshotRepository>
-            <id>oss</id>
+            <id>sonatype</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
 
         <repository>
-            <id>oss</id>
+            <id>sonatype</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
 
