--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,16 @@
     <url>https://github.com/daodao-bot/ice-run-lib</url>
 
     <modules>
-<!--        <module>ice-run-bom</module>-->
-<!--        <module>ice-run-core</module>-->
-<!--        <module>ice-run-util</module>-->
+        <module>ice-run-bom</module>
+        <module>ice-run-core</module>
+        <module>ice-run-util</module>
     </modules>
 
     <properties>
         <java.version>21</java.version>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+        <ice-run-lib.version>0.0.1-SNAPSHOT</ice-run-lib.version>
     </properties>
 
     <dependencies>
