--- a/ice-run-bom/pom.xml
+++ b/ice-run-bom/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>run.ice.lib</groupId>
         <artifactId>ice-run-lib</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
         <relativePath/>
     </parent>
 
