--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>run.ice.lib</groupId>
     <artifactId>ice-run-lib</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <name>ice-run-lib</name>
     <description>ice-run 凌汛 Java 类库</description>
@@ -25,7 +25,7 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
-        <ice-run-lib.version>0.0.1-SNAPSHOT</ice-run-lib.version>
+        <ice-run-lib.version>0.0.1</ice-run-lib.version>
     </properties>
 
     <dependencies>
@@ -147,7 +147,6 @@
                     <charset>UTF-8</charset>
                     <encoding>UTF-8</encoding>
                     <docencoding>UTF-8</docencoding>
-                    <additionalparam>-Xdoclint:none</additionalparam>
                 </configuration>
                 <executions>
                     <execution>
