--- a/ice-run-util/pom.xml
+++ b/ice-run-util/pom.xml
@@ -7,8 +7,7 @@
     <parent>
         <groupId>run.ice.lib</groupId>
         <artifactId>ice-run-lib</artifactId>
-        <version>0.0.1</version>
-        <relativePath/>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>ice-run-util</artifactId>
@@ -19,12 +18,23 @@
         <java.version>21</java.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>run.ice.lib</groupId>
+                <artifactId>ice-run-bom</artifactId>
+                <version>${ice-run-lib.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
 
         <dependency>
             <groupId>run.ice.lib</groupId>
             <artifactId>ice-run-core</artifactId>
-            <version>${ice-run-lib.version}</version>
         </dependency>
 
     </dependencies>
